--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>google search</title>
   </head>
-  <body></body>
+  <body>
+      <header class="header">
+          <div class="container">
+              
+          </div>
+      </header>
+  </body>
 </html>
