--- a/g_ext-search.html
+++ b/g_ext-search.html
@@ -34,19 +34,15 @@
     </header>
     <main class="main">
       <div class="container">
-        <div class="image-wrapper">
-          <img
-            src="./assets/img/googlelogo_color_272x92dp.png"
-            alt=""
-            class="main__image"
-          />
-        </div>
-        <form class="main__form" action="https://google.com/search">
-          <input class="main__input" type="text" name="q" />
-          <div class="form-buttons__wrapper">
-            <input class="form-button" type="submit" value="Google Search" />
-            <input class="form-button" type="submit" value="Мне повезет" />
-          </div>
+        <img
+          src="./assets/img/googlelogo_color_272x92dp.png"
+          alt=""
+          class="main__image"
+        />
+        <form action="https://google.com/search">
+          <input type="text" name="q" />
+          <input type="submit" value="Google Search" />
+          <input type="submit" value="Мне повезет" />
         </form>
       </div>
     </main>
