--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           />
         </div>
         <form class="main__form" action="https://google.com/search">
-          <input class="main__input" type="text" name="q" />
+          <input class="main__input" type="text" name="q" placeholder="&#128269;"/>
           <div class="form-buttons__wrapper">
             <input class="form-button" type="submit" value="Google Search" />
             <input class="form-button" type="submit" value="Мне повезет" />
